--- a/views/home.html
+++ b/views/home.html
@@ -5,9 +5,96 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <title>Azuletta</title>
 </head>
 <body>
-    <h1>Azuletta</h1>
+    <header>
+
+        <section class="header-bar">
+            <div class="logo-name">
+                <img src="/images/azuletta_logo_header.png" alt="logo">
+                <h3>AZULETTA</h3>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href = "" >Home</a></li>
+                    <li><a href = "" >Crea tu CV</a></li>
+                    <li><a href = "" >Sobre Nosotros</a></li>
+                    <li><a href = "" >Contacto</a></li>
+                </ul>   
+            </nav>
+        </section>
+
+    </header>
+
+    <main>
+
+    </section>
+
+        <section class="section-1">
+
+            <img src="/images/istockphoto-1173660637-612x612.jpg" alt="cv">
+            <div>
+                <h3>CREA TU CURRICULUM ONLINE</h3>
+                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+                sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
+                Neque porro quisquam est, qui dolorem.</p>
+            </div>
+            <div  class="boton">
+                <button type="submit">CREA TU CV</button>
+            </div>
+
+
+        </section>
+
+        <section class="section-2">
+
+            <h3>POTENCIAMOS TU CV</h3>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+                sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
+                Neque porro quisquam est, qui dolorem.</p>
+
+        </section>
+
+        <section class="section-3">
+
+            <h3>CREALO EN 3 SIMPLES PASOS</h3>
+            <div class="paso-1">
+                <p class="numero-1">1</p>
+                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+                sed quia consequuntur magni.</p>
+            </div>
+            <div class="paso-2">
+                <p class="numero-2">2</p>
+                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+                sed quia consequuntur magni.</p>
+            </div>
+            <div class="paso-3">
+                <p class="numero-3">3</p>
+                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+                sed quia consequuntur magni.</p>
+            </div>
+
+        </section>
+
+        <section class="section-4">
+            <h3>VALORACIONES</h3>
+            <div>
+                <p class="foto-valoracion">X</p>
+                <h4>PROFESION</h4>
+                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+                sed quia consequuntur magni.</p>
+            </div>
+        </section>
+
+    </main>
+
+    <footer>
+
+        <div>
+            <p>REDES</p>
+        </div>
+
+    </footer>
 </body>
 </html>
