--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    rel="stylesheet" />
     <link rel="stylesheet" href="/css/style.css">
+
     <title>Azuletta</title>
 </head>
 <body>
@@ -21,8 +24,14 @@
                     <li><a href = "" >Crea tu CV</a></li>
                     <li><a href = "" >Sobre Nosotros</a></li>
                     <li><a href = "" >Contacto</a></li>
+                    <br>
+                    <li><a href = "" >Ingresar</a></li>
+                    <li><a href = "" >Registarse</a></li>
                 </ul>   
             </nav>
+            <div class="burger">
+                <i class="fas fa-bars burger-bars"></i>
+            </div>
         </section>
 
     </header>
