--- a/views/home.html
+++ b/views/home.html
@@ -25,8 +25,8 @@
                     <li><a href = "" >Sobre Nosotros</a></li>
                     <li><a href = "" >Contacto</a></li>
                     <br>
-                    <li><a href = "" >Ingresar</a></li>
-                    <li><a href = "" >Registarse</a></li>
+                    <li class="ingresar"><a href = "" >Ingresar</a></li>
+                    <li class="registrarse"><a href = "" >Registarse</a></li>
                 </ul>   
             </nav>
             <div class="burger">
@@ -43,16 +43,15 @@
         <section class="section-1">
 
             <img src="/images/istockphoto-1173660637-612x612.jpg" alt="cv">
-            <div>
+            <div class="description-1">
                 <h3>CREA TU CURRICULUM ONLINE</h3>
                 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
                 sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
                 Neque porro quisquam est, qui dolorem.</p>
+                <div  class="boton">
+                    <button type="submit">CREA TU CV</button>
+                </div>
             </div>
-            <div  class="boton">
-                <button type="submit">CREA TU CV</button>
-            </div>
-
 
         </section>
 
@@ -68,27 +67,29 @@
         <section class="section-3">
 
             <h3>CREALO EN 3 SIMPLES PASOS</h3>
-            <div class="paso-1">
-                <p class="numero-1">1</p>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
-                sed quia consequuntur magni.</p>
-            </div>
-            <div class="paso-2">
-                <p class="numero-2">2</p>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
-                sed quia consequuntur magni.</p>
-            </div>
-            <div class="paso-3">
-                <p class="numero-3">3</p>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
-                sed quia consequuntur magni.</p>
+            <div class="pasos">
+                <div class="paso-1">
+                    <p class="numero-1">1</p>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+                    sed quia consequuntur magni.</p>
+                </div>
+                <div class="paso-2">
+                    <p class="numero-2">2</p>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+                    sed quia consequuntur magni.</p>
+                </div>
+                <div class="paso-3">
+                    <p class="numero-3">3</p>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+                    sed quia consequuntur magni.</p>
+                </div>
             </div>
 
         </section>
 
         <section class="section-4">
             <h3>VALORACIONES</h3>
-            <div>
+            <div class="valoracion">
                 <p class="foto-valoracion">X</p>
                 <h4>PROFESION</h4>
                 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
