--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,6 +50,8 @@ header section nav ul li a{
     text-decoration: none;
 }
 
+/* HOME */
+
 /* SECTION 1 */
 
 main section.section-1{
@@ -234,6 +236,14 @@ main section.section-4 div p.foto-valoracion{
     width: 15%;
     margin: 0px auto;
 }
+
+/* CREA TU CV */
+
+/* CARRITO */
+
+/* LOGIN */
+
+/* REGISTRO */
 
 /* FOOTER */
 
