--- a/views/creaTuCv.html
+++ b/views/creaTuCv.html
@@ -4,18 +4,98 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    rel="stylesheet" />
+    <link rel="stylesheet" href="/css/style.css">
     <title>Azuleta</title>
 </head>
 <body>
     <header>
+        <section class="header-bar">
+            <div class="logo-name">
+                <img src="/images/azuletta_logo_header.png" alt="logo">
+                <h3>AZULETTA</h3>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href = "" >Home</a></li>
+                    <li><a href = "" >Crea tu CV</a></li>
+                    <li><a href = "" >Sobre Nosotros</a></li>
+                    <li><a href = "" >Contacto</a></li>
+                    <br>
+                    <li class="ingresar"><a href = "" >Ingresar</a></li>
+                    <li class="registrarse"><a href = "" >Registarse</a></li>
+                </ul>   
+            </nav>
+            <div class="burger">
+                <i class="fas fa-bars burger-bars"></i>
+            </div>
+        </section>
 
     </header>
     <main>
-        <section>
-            <article></article>
+
+        <section class="silver">
+
+            <article>
+                <img src ="/images/CVSilver.png" alt="CV Silver">
+                <div>
+                    <h3>CV Silver</h3>
+                    <h4>Diseño clásico</h4>
+                    <h4>$500</h4>
+                    <form action="" method="POST">
+                        <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
+                    </form> 
+                </div>   
+            </article>
+
         </section>
+
+        <section class="gold">
+
+            <article>
+                <img src ="/images/CVGold.png" alt="CV Gold">
+
+            </article>
+
+            <div>
+                <h3>CV Gold</h3>
+                <h4>Diseño innovador</h4>
+                <h4>$1000</h4>
+                <form action="" method="POST">
+                    <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
+                </form> 
+            </div> 
+
+        </section>
+
+
+        <section class="black">
+
+            <article>
+                <img src ="/images/CVBlack.png" alt="CV Black">
+
+                <div>
+                    <h3>CV Black</h3>
+                    <h4>Diseño de alto impacto</h4>
+                    <h4>$1500</h4>
+                    <form action="" method="POST">
+                        <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
+                    </form> 
+                </div> 
+
+            </article>
+
+        </section>
+
+
     </main>
+
     <footer>
+
+        <div>
+            <p>REDES</p>
+        </div>
 
     </footer>
 </body>
