Act. css + html creatucv

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -239,6 +239,42 @@ main section.section-4 div p.foto-valoracion{
 
 /* CREA TU CV */
 
+main section.silver img{
+    background-color: rgb(246, 246, 246);
+    border: 1px solid #b3b3b3;
+    border-radius: 0px;
+    width: 10%;
+    margin-top: 5%;
+    margin-bottom: 15%;
+    margin-left: 130px;
+    margin-right: 100px;
+    padding: 0%;
+}
+
+main section.gold img{
+    background-color: rgb(246, 246, 246);
+    border: 1px solid #b3b3b3;
+    border-radius: 0px;
+    width: 10%;
+    margin-top: 5%;
+    margin-bottom: 15%;
+    margin-left: 130px;
+    margin-right: 100px;
+    padding: 0%;
+}
+
+main section.black img{
+    background-color: rgb(246, 246, 246);
+    border: 1px solid #b3b3b3;
+    border-radius: 0px;
+    width: 10%;
+    margin-top: 5%;
+    margin-bottom: 15%;
+    margin-left: 130px;
+    margin-right: 100px;
+    padding: 0%;
+}
+
 /* CARRITO */
 
 /* LOGIN */
