Act. Html creatucv

--- a/views/creatucv.html
+++ b/views/creatucv.html
@@ -39,10 +39,18 @@
 
             <article>
                 <img src ="/images/CVSilver.png" alt="CV Silver">
-                <div>
-                    <h3>CV Silver</h3>
+
+                <div class="titulo-silver">
+                    <h2>CV Silver</h2>
+                </div>
+
+                <div class="description-silver">
                     <h4>Diseño clásico</h4>
-                    <h4>$500</h4>
+                </div>
+
+                <div class="price-silver">
+                    <h5>$500</h5>
+
                     <form action="" method="POST">
                         <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
                     </form> 
@@ -58,10 +66,17 @@
 
             </article>
 
-            <div>
-                <h3>CV Gold</h3>
+            <div class="titulo-gold">
+                <h1>CV Gold</h1>
+            </div>
+
+            <div class="description-gold">
                 <h4>Diseño innovador</h4>
-                <h4>$1000</h4>
+            </div>
+
+            <div class="price-gold">
+                <h5>$1000</h5>
+    
                 <form action="" method="POST">
                     <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
                 </form> 
@@ -75,10 +90,14 @@
             <article>
                 <img src ="/images/CVBlack.png" alt="CV Black">
 
-                <div>
-                    <h3>CV Black</h3>
+                <div class="titulo-black">
+                    <h2>CV Black</h2>
+                </div>
+                    <div class="description-black">
                     <h4>Diseño de alto impacto</h4>
-                    <h4>$1500</h4>
+                    </div>
+                    <div class="price-black">
+                    <h5>$1500</h5>
                     <form action="" method="POST">
                         <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
                     </form> 
