--- a/views/creatucv.html
+++ b/views/creatucv.html
@@ -50,7 +50,9 @@
 
                 <div class="price-silver">
                     <h5>$500</h5>
+                </div>
 
+                    <div class="bottom-silver">
                     <form action="" method="POST">
                         <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
                     </form> 
@@ -76,6 +78,8 @@
 
             <div class="price-gold">
                 <h5>$1000</h5>
+            </div>
+            <div class="bottom-gold">
     
                 <form action="" method="POST">
                     <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
@@ -98,6 +102,8 @@
                     </div>
                     <div class="price-black">
                     <h5>$1500</h5>
+                    </div>
+                    <div class="bottom-black">
                     <form action="" method="POST">
                         <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
                     </form> 
