--- a/public/css/style.css
+++ b/public/css/style.css
@@ -454,7 +454,7 @@ main section.black img{
 .login-box {
     width: 320px;
     height: 420px;
-    background: #000;
+    background: rgb(148, 140, 140);
     color: #fff;
     top: 50%;
     left: 50%;
@@ -462,6 +462,7 @@ main section.black img{
     transform: translate(-50%, -50%);
     box-sizing: border-box;
     padding: 70px 30px;
+    border-radius: 10px;
 }
 
 .login-box .avatar {
@@ -471,6 +472,9 @@ main section.black img{
     position: absolute;
     top: -50px;
     left: calc(50% - 50px);
+    background-color: #fff;
+    border: 1px solid #028090;
+    padding: 5px;
     }
 
 .login-box h1 {
@@ -507,7 +511,7 @@ main section.black img{
     border: none;
     outline: none;
     height: 40px;
-    background: #b80f22;
+    background: #473383;
     color: #fff;
     font-size: 18px;
     border-radius: 20px;
