--- a/views/creatucv.html
+++ b/views/creatucv.html
@@ -7,7 +7,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     rel="stylesheet" />
     <link rel="stylesheet" href="/css/style.css">
-    <title>Azuleta</title>
+    <title>Azuletta</title>
 </head>
 <body>
     <header>
