--- a/views/registrarse.html
+++ b/views/registrarse.html
@@ -1,51 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    rel="stylesheet" />
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Azuletta</title> 
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        rel="stylesheet" />
+        <link rel="stylesheet" href="/css/style.css">
+        <title>Azuletta</title> 
+    </head>
 <body>
-    <header>
-
-        <section class="header-bar">
-            <div class="logo-name">
-                <img src="/images/azuletta_logo_header.png" alt="logo">
-                <h3>AZULETTA</h3>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href = "" >Home</a></li>
-                    <li><a href = "" >Crea tu CV</a></li>
-                    <li><a href = "" >Sobre Nosotros</a></li>
-                    <li><a href = "" >Contacto</a></li>
-                    <br>
-                    <li class="ingresar"><a href = "" >Ingresar</a></li>
-                    <li class="registrarse"><a href = "" >Registarse</a></li>
-                </ul>   
-            </nav>
-            <div class="burger">
-                <i class="fas fa-bars burger-bars"></i>
-            </div>
-        </section>
-
-    </header>
-
+    
     <main>
+        <div class="registro">
+           <img class="avatar" src="/images/azuletta_logo_header.png" alt="logo">  
+           <h1>Registrarse</h1>
+           <form>
+            <label for="username">Nombre y Apellido</label>
+            <input type="text" placeholder="Ingresa tu Nombre Completo">
+            
+            <label for="email">Coreo Electrónico</label>
+            <input type="email" placeholder="Ingresa tu email">
 
+            <label for="email">Coreo Electrónico</label>
+            <input type="email" placeholder="Confirma tu email">
+
+            <label for="password">Contraseña</label>
+            <input type="password" placeholder="Ingresa tu Contraseña">
+
+            <label for="password">Contraseña</label>
+            <input type="password" placeholder="Confirma tu Contraseña">
+
+            <input type="submit" value="Registrarse"><br>
+
+            <a href="#">Ya estás registrado?</a>
+            
+           </form>
+        </div>
     
     </main>
 
-    <footer>
-        <div>
-            <p>REDES</p>
-        </div>
-
-    </footer>
+    
     
 </body>
 </html>
