--- a/views/carrito.html
+++ b/views/carrito.html
@@ -34,8 +34,63 @@
 
     </header>
     <main>
-        <section>
+        <section class="carrito">
             <h3>Carrito de compras</h3>
+            <div class="producto-silver">
+                <img src="/images/CVSilver.png" alt="silver" class="imagen-producto">
+                <div class="descripcion-producto">
+                    <div class="description-column">
+                        <h4>CV Silver</h4>
+                        <ul>
+                            <li>Modelos de CV Basicos.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="precio-producto">
+                    <p class="precio">$$$</p>
+                    <p class="cantidad">+ 1 -</p>
+                    <p class="eliminar">Eliminar</p>
+                </div>
+            </div>
+            <div class="producto-gold">
+                <img src="/images/CVGold.png" alt="gold">
+                <div class="descripcion-producto">
+                    <div class="description-column">
+                        <h4>CV Gold</h4>
+                        <ul>
+                            <li>Modelos de CV Premium.</li>
+                            <li>Asesoria por profesionales.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="precio-producto">
+                    <p class="precio">$$$</p>
+                    <p class="cantidad">+ 1 -</p>
+                    <p class="eliminar">Eliminar</p>
+                </div>
+            </div>
+            <div class="producto-black">
+                <img src="/images/CVBlack.png" alt="black">
+                <div class="descripcion-producto">
+                    <div class="description-column">
+                        <h4>CV Black</h4>
+                        <ul>
+                            <li>Modelos de CV Premium.</li>
+                            <li>Asesoria por profesionales.</li>
+                            <li>Ofertas de trabajo coincidentes.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="precio-producto">
+                    <p class="precio">$$$</p>
+                    <p class="cantidad">+ 1 -</p>
+                    <p class="eliminar">Eliminar</p>
+                </div>
+            </div>
+            <div class="total-finalizar">
+                <p>Total: $$$$$</p>
+                <button type="submit">Finalizar Compra</button>
+            </div>
         </section>
     </main>
     <footer>
