--- a/views/home.html
+++ b/views/home.html
@@ -19,13 +19,13 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href = "" >Home</a></li>
-                    <li><a href = "" >Crea tu CV</a></li>
+                    <li><a href = "/" >Home</a></li>
+                    <li><a href = "/creatucv" >Crea tu CV</a></li>
                     <li><a href = "" >Sobre Nosotros</a></li>
                     <li><a href = "" >Contacto</a></li>
                     <br>
-                    <li class="ingresar"><a href = "" >Ingresar</a></li>
-                    <li class="registrarse"><a href = "" >Registarse</a></li>
+                    <li class="ingresar"><a href = "/login" >Ingresar</a></li>
+                    <li class="registrarse"><a href = "/registrarse" >Registarse</a></li>
                 </ul>   
             </nav>
             <div class="burger">
