--- a/views/creatucv.html
+++ b/views/creatucv.html
@@ -18,14 +18,14 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href = "" >Home</a></li>
-                    <li><a href = "" >Crea tu CV</a></li>
+                    <li><a href = "/" >Home</a></li>
+                    <li><a href = "/creatucv" >Crea tu CV</a></li>
                     <li><a href = "" >Sobre Nosotros</a></li>
                     <li><a href = "" >Contacto</a></li>
                     <br>
-                    <li class="ingresar"><a href = "" >Ingresar</a></li>
-                    <li class="registrarse"><a href = "" >Registarse</a></li>
-                </ul>   
+                    <li class="ingresar"><a href = "/login" >Ingresar</a></li>
+                    <li class="registrarse"><a href = "/registrarse" >Registarse</a></li>
+                </ul>  
             </nav>
             <div class="burger">
                 <i class="fas fa-bars burger-bars"></i>
