--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,6 +130,7 @@ main section.section-3 div.paso-1{
     background-color: rgb(246, 246, 246);
     border: 2px solid #b3b3b3;
     border-radius: 10px;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
     width: 250px;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -153,6 +154,7 @@ main section.section-3 div.paso-2{
     background-color: rgb(246, 246, 246);
     border: 2px solid #b3b3b3;
     border-radius: 10px;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
     width: 250px;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -176,6 +178,7 @@ main section.section-3 div.paso-3{
     background-color: rgb(246, 246, 246);
     border: 2px solid #b3b3b3;
     border-radius: 10px;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
     width: 250px;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -1003,6 +1006,8 @@ footer div.foto-redes{
         flex-wrap: wrap;
         flex-direction: row;
         justify-content: space-around;
+        width: 90%;
+        margin: 60px auto;
 
     }
 
@@ -1043,45 +1048,45 @@ footer div.foto-redes{
         flex-direction: row;
         justify-content: space-around;
         margin: 5% 0%;
-        width: 100%;
+        width: 90%;
     }
 
     main section.section-3 div.paso-1{
         position: relative;
-        width: 230px;
+        width: 220px;
         margin: 0% 2%;
         padding: 2%;
     }
 
     section.section-3 div.paso-1 p.numero-1{
         position: absolute;
-        left: 90px;
+        left: 85px;
         bottom: 160px;
     }
 
     main section.section-3 div.paso-2{
         position: relative;
-        width: 230px;
+        width: 220px;
         margin: 0% 2%;
         padding: 2%;
     }
 
     section.section-3 div.paso-2 p.numero-2{
         position: absolute;
-        left: 90px;
+        left: 85px;
         bottom: 160px;
     }
 
     main section.section-3 div.paso-3{
         position: relative;
-        width: 230px;
+        width: 220px;
         margin: 0% 2%;
         padding: 2%;
     }
 
     section.section-3 div.paso-3 p.numero-3{
         position: absolute;
-        left: 90px;
+        left: 85px;
         bottom: 160px;
     }
 
@@ -1190,8 +1195,44 @@ footer div.foto-redes{
 
 
 }
+
 /* DESKTOP */
 
 @media (min-width: 1269px){
+
+    main section.section-3 div.pasos{
+
+        width: 80%;
+    }
     
+    main section.section-3 div.paso-1{
+        width: 255px;
+        height: 200px;
+    }
+
+    section.section-3 div.paso-1 p.numero-1{
+        left: 100px;
+        bottom: 170px;
+    }
+
+    main section.section-3 div.paso-2{
+        width: 255px;
+        height: 200px;
+    }
+
+    section.section-3 div.paso-2 p.numero-2{
+        left: 100px;
+        bottom: 170px;
+    }
+
+    main section.section-3 div.paso-3{
+        width: 255px;
+        height: 200px;
+    }
+
+    section.section-3 div.paso-3 p.numero-3{
+        left: 100px;
+        bottom: 170px;
+
+    }
 }
